fix(quality): critical findings